--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<div class="text-center">
+  <h1>Home#about</h1>
+  <p>Find me in app/views/home/about.html.erb</p>
+</div>
+
