--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="text-center">
+  <!-- Your text content here -->
+  <h1>Home#index</h1>
+  <p>Find me in app/views/home/index.html.erb</p>
+</div>
+
