--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <!-- Your text content here -->
-  <h1>Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+  <h1>Home Page</h1>
+  <p>Here you will learn all about making your favorite dress.</p>
 </div>
 
