--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -10,25 +10,27 @@
           <%= link_to 'Home', root_path, class:"nav-link"%>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <%= link_to 'About', about_path, class:"nav-link" %>
         </li>
+
+      </ul>
+      
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to root_path, class: "nav-link" do %>
             <i class="bi bi-person"></i> Profile
-          <% end %>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <% if user_signed_in? %>
+              <li class="dropdown-item">
+                <%= link_to 'About', about_path, class:"nav-link" %>
+              </li>
+            <% else %> 
+              <li class="dropdown-item">
+                <%= link_to 'Something else', about_path, class:"nav-link" %>
+              </li>
+            <% end %>
+          </ul>
         </li>
       </ul>
     </div>
