--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class:"nav-link"%>
+          <%= link_to 'Home', root_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to 'About', about_path, class:"nav-link" %>
+          <%= link_to 'About', about_path, class: "nav-link" %>
         </li>
 
       </ul>
@@ -23,11 +23,14 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <% if user_signed_in? %>
               <li class="dropdown-item">
-                <%= link_to 'About', about_path, class:"nav-link" %>
+                <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+              </li>
+              <li>
+                <%= link_to "Admin Panel", rails_admin_path, class: "nav-link" %>
               </li>
             <% else %> 
               <li class="dropdown-item">
-                <%= link_to 'Something else', about_path, class:"nav-link" %>
+                <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
               </li>
             <% end %>
           </ul>
