--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1>Home#about</h1>
-  <p>Find me in app/views/home/about.html.erb</p>
+  <h1>About Us</h1>
+  <p>Garden Door Bridal is the best</p>
 </div>
 
