--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -28,7 +28,10 @@
               <li class="dropdown-item">
                 <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
               </li>
-              <li>
+              <li class="dropdown-item">
+                <%= link_to "Change Password", edit_user_registration_path, class: "nav-link" %>
+              </li>
+              <li class="dropdown-item">
                 <%= link_to "Admin Panel", rails_admin_path, class: "nav-link" %>
               </li>
             <% else %> 
