--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <h2 class="mb-3 text-center">Edit <%= resource_name.to_s.humanize %></h2>
+      <h2 class="mb-3 text-center">Edit Profile</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'needs-validation' }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
